[gd_scene load_steps=11 format=3 uid="uid://d36p5ai7wv0o5"]

[ext_resource type="Script" path="res://scripts/telescreen/two_minutes_hate.gd" id="1_03w84"]
[ext_resource type="LabelSettings" uid="uid://7n2mpeid6uy4" path="res://resources/two_minutes_hate_label_settings.tres" id="1_6au14"]
[ext_resource type="Texture2D" uid="uid://c4l8x5sar0uwd" path="res://assets/telescreen/big_brother/big brother.svg" id="1_u7h5j"]
[ext_resource type="Texture2D" uid="uid://bo5gphb8lylfl" path="res://assets/telescreen/big_brother/Eye Socket.svg" id="2_vh22v"]
[ext_resource type="Texture2D" uid="uid://cd3dhbokra583" path="res://assets/telescreen/Iris.svg" id="3_pjwvw"]
[ext_resource type="Texture2D" uid="uid://xwdpe1g52qlv" path="res://assets/telescreen/goldstein.svg" id="4_f2pxh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25bj3"]
bg_color = Color(0.231373, 0.517647, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5g66s"]
bg_color = Color(0.905882, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pvbi"]
bg_color = Color(1, 0.545098, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w35gx"]
bg_color = Color(0.941176, 0, 0.203922, 1)

[node name="TwoMinutesHate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_03w84")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Person" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 75.0
offset_bottom = -75.0

[node name="BB" type="TextureRect" parent="Person"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u7h5j")
stretch_mode = 5

[node name="Left Eye" type="TextureRect" parent="Person/BB"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -226.0
offset_right = -95.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vh22v")

[node name="Iris" type="TextureRect" parent="Person/BB/Left Eye"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pjwvw")

[node name="Right Eye" type="TextureRect" parent="Person/BB"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = -226.0
offset_right = 246.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vh22v")

[node name="Iris" type="TextureRect" parent="Person/BB/Right Eye"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pjwvw")

[node name="Goldstein" type="TextureRect" parent="Person"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_f2pxh")
stretch_mode = 5

[node name="Rules" type="VBoxContainer" parent="Person"]
custom_minimum_size = Vector2(1080, 1080)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -540.0
offset_right = 540.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Person/Rules"]
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=128][outline_color=white][outline_size=15][u]Two Minutes Hate[/u][/outline_size][/outline_color][/font_size]

[font_size=48]
It's time to praise our glorious Big Brother and hate on our biggest enemy, Goldstein.
A true party member should be able to reach a quota of 200.
Remember, Big Brother loves you.
[/font_size]
[/center]"
fit_content = true

[node name="StartButton" type="Button" parent="Person/Rules"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 96
theme_override_styles/normal = SubResource("StyleBoxFlat_25bj3")
theme_override_styles/hover = SubResource("StyleBoxFlat_5g66s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_25bj3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_25bj3")
theme_override_styles/focus = SubResource("StyleBoxFlat_25bj3")
text = "Start"

[node name="TimerBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -82.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_0pvbi")
max_value = 120.0
value = 120.0
show_percentage = false

[node name="Timer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "2:00"
label_settings = ExtResource("1_6au14")

[node name="ScoreBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_w35gx")
max_value = 200.0
step = 1.0
show_percentage = false

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.0
offset_right = 148.0
offset_bottom = 78.0
grow_horizontal = 2
text = "Score: 0"
label_settings = ExtResource("1_6au14")

[connection signal="pressed" from="Person/Rules/StartButton" to="." method="_on_start_button_pressed"]
